# chorale

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/workflows/: build.yml  release.yml
docs/: v1.2-signal-graph.md
scripts/: install.sh  notarize.sh
src/: Assets.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Presets.h  UpdateCheck.h
src/dsp/: Fft.h  HarmonyEngine.cpp  HarmonyEngine.h  KeyEngine.cpp  KeyEngine.h  PitchTracker.h  PsolaShifter.cpp  PsolaShifter.h  SignalGraph.h  VoiceFx.h  YinTracker.cpp  YinTracker.h
src/ui/: ChoraleLookAndFeel.cpp  ChoraleLookAndFeel.h  CompPanel.cpp  CompPanel.h  EqPanel.cpp  EqPanel.h  FxPanels.cpp  FxPanels.h  FxView.cpp  FxView.h  GainFader.cpp  GainFader.h  GraphCanvas.cpp  GraphCanvas.h  MixerView.cpp  MixerView.h  NoteChips.cpp  NoteChips.h  StageView.cpp  StageView.h  Theme.cpp  Theme.h  VoiceDetailPanel.cpp  VoiceDetailPanel.h
tests/: test_dsp.cpp
tools/: benchmark.cpp  harmonize.cpp
